--- a/_posts/2015-07-02-science.md
+++ b/_posts/2015-07-02-science.md
@@ -17,3 +17,7 @@ I think this means something like
 
 >The inadequacy of our technology is no longer sufficient to mask our reliance on appeal to authority in lieu of demonstrable competence.
 
+But surely that's not possible, it is?
+
+
+
