--- a/_posts/2015-07-31-minute.md
+++ b/_posts/2015-07-31-minute.md
@@ -7,7 +7,9 @@ When I first learned about the public radio program *The Academic Minute*, it so
 
 But I believe more people should know about the important work that the [Holy Cross Manuscripts, Inscriptions, and Documents Club](http://HCMID.github.io) is doing, so I had a go at it, and found it a stimulating as well as challenging exercise.  (I also learned that in academia, a "minute" actually allows you about 90 seconds.)
 
-My minute is being broadcast today, as well as being posted on line.  There are some minor discrepancies between the transcription and the audio recording , but both are [available on the *Academic Minute* website][minute].
+My minute is being broadcast today, as well as being posted on line.  There are some minor discrepancies between the transcription and the audio recording , but both are [available on the *Academic Minute* website][minute], from the [*Inside Higher Ed* podcast][inside].
 
+
+[inside]: https://www.insidehighered.com/audio/2015/07/31/digital-research
 
 [minute]: http://academicminute.org/2015/07/neel-smith-holy-cross-digital-research/
