--- a/_posts/2015-09-07-labor.md
+++ b/_posts/2015-09-07-labor.md
@@ -18,9 +18,9 @@ In a page and a half, Schwartz summarizes the answers to "the crucial question" 
  
 "Of course," Schwartz concludes, "few occupations have all these features."
 
-I see every single one of these answers to "Why do we work?" when I meet each week with members of the MID Club.  Engaged?  I've been in the lab with busy teams at 6:00 on the Friday before spring break.  Challenged?  Reading scholia on the *Iliad* is as difficult as anything I've tried to do in forty years of studying ancient Greek.  Fun solving puzzles?  Constantly: whether it's deciphering a difficult hand, figuring out the quire organization of a manuscript, or decoding cryptic critical signs, the club members are puzzle solvers of the first water.  Do they achieve mastery?  The international scholarly recognition these undergraduates have received at conferences in a half a dozen countries before they have even earned a B.A. degree is extraordinary.  Socially engaged?  Just listen to the volume of chatter on the fourth floor of Fenwick Hall during a club work session.  And, finally, meaningful?  This is probably what first draws most of the students to look into joining the club: you can see their faces light up at  the idea that while they are having all this fun, they are making a genuine contribution to the scholarly record.
+I see every one of these answers to "Why do we work?" when I meet each week with members of the MID Club.  Engaged?  I've been in the lab with busy teams at 6:00 on the Friday before spring break.  Challenged?  Reading scholia on the *Iliad* is as difficult as anything I've done in forty years of studying ancient Greek.  Fun solving puzzles?  Constantly: whether it's deciphering a difficult hand, determining the quire organization of a manuscript, or decoding cryptic critical signs, the club members are puzzle solvers of the first water.  Do they achieve mastery?  The international scholarly recognition these undergraduates have received at conferences in a half a dozen countries before they have even earned a B.A. degree is extraordinary.  Socially engaged?  Just listen to the volume of chatter on the fourth floor of Fenwick Hall during a club work session.  And, finally, meaningful?  This is probably what draws most of the students to look into joining the club: you can see their faces light up at  the idea that while they are having all this fun, they are making a genuine contribution to the scholarly record.
 
-There is more, too  — the exciting sense of immediacy in looking at a thousand-year-old object, and recognizing  a specific invidiual's hand writing;  the reward of seeing hours of hard work in Greek or Latin courses applied in original research — but what is entirely absent is external compensation:  no grades, and no money.
+There is more, too  — the exciting sense of immediacy in looking at a thousand-year-old object, and recognizing the handwriting of a specific invidiual;  the reward of seeing hours of hard work in Greek or Latin courses applied to original research — but what is entirely absent is external compensation:  no grades, and no money.
 
-Schwartz' book discusses why so few people experience fulfillment in their employment, and how we have often structured employment in ways that make it hard to find answers to "the crucial question".  For the students I advise, on the other hand, those structural obstacles simply do not exist.  MID Club members cannot support themselves by participating in an undergraduate club, any more than members of Holy Cross' athletic teams or musical ensembles are able to support themselves with their extracurricular activities, but their example should remind us that while we may struggle to make our places of employment satisfying, we can find the deeply meaningful fulfillment of labor unattached to monetary reward.
+Schwartz' book discusses why so few people experience fulfillment in their employment, and how we often structure employment in ways that make it hard to find answers to "the crucial question".  For the students I advise, on the other hand, those structural obstacles simply do not exist.  MID Club members cannot support themselves by participating in an undergraduate club, any more than members of Holy Cross' athletic teams or musical ensembles support themselves with their extracurricular activities, but their example should remind us that while we may struggle to make our employment satisfying, we can find the deeply meaningful fulfillment of labor unattached to monetary reward.
 
