Accept another edit

--- a/_posts/2015-09-07-labor.md
+++ b/_posts/2015-09-07-labor.md
@@ -22,5 +22,5 @@ I see every one of these answers to "Why do we work?" when I meet each week with
 
 There is more, too  — the exciting sense of immediacy in looking at a thousand-year-old object, and recognizing the handwriting of a specific invidiual;  the reward of seeing hours of hard work in Greek or Latin courses applied to original research — but what is entirely absent is external compensation:  no grades, and no money.
 
-Schwartz' book discusses why so few people experience fulfillment in their employment, and how we often structure employment in ways that make it hard to find answers to "the crucial question".  For the students I advise, on the other hand, those structural obstacles simply do not exist.  MID Club members cannot support themselves by participating in an undergraduate club, any more than members of Holy Cross' athletic teams or musical ensembles support themselves with their extracurricular activities, but their example should remind us that while we may struggle to make our employment satisfying, we can find the deeply meaningful fulfillment of labor unattached to monetary reward.
+Schwartz' book discusses why so few people experience fulfillment in their employment, and how we often structure employment in ways that make it hard to find answers to "the crucial question".  For the students I advise, on the other hand, those structural obstacles simply do not exist.  MID Club members cannot support themselves by participating in an undergraduate club, any more than members of Holy Cross' athletic teams or musical ensembles support themselves with their extracurricular activities, but their example should remind us that while we may struggle to make our employment satisfying, we can find deeply meaningful fulfillment in labor unattached to monetary reward.
 
