--- a/_posts/2015-09-08-atom.md
+++ b/_posts/2015-09-08-atom.md
@@ -3,7 +3,7 @@ title: "Atom: an editor for digital humanists?"
 layout: post
 ---
 
-This summer, github's [Atom](https://atom.io/), "a hackable editor," went public with an official 1.0 release.  New text editors are the kind of thing I don't get excited about — there are plenty of good ones out there already to choose from — but Atom is different.
+This summer, github's [Atom](https://atom.io/), "a hackable text editor for the 21st century," went public with an official 1.0 release.  New text editors are the kind of thing I don't get excited about — there are plenty of good ones out there already to choose from — but Atom is different.
 
 I won't try to summarize in a short blog post all the really well thought out and nicely implemented things that immediately make it pleasant to start working in Atom.  Instead, here is a  small selection of highlights that I think would be difficult or impossible to find together in another editor, and collectively make Atom an especially attractive option for digital humanitsts.
 
