Update tags and add new post

--- a/_posts/2015-03-15-milesian.md
+++ b/_posts/2015-03-15-milesian.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: "Milesian numbers in greeklang 0.0.3"
+tags:
+  - greeklang
 ---
 
 I've added initial specifications for working with numeric values in "Milesian" notation to the [`greeklang` library](http://neelsmith.github.io/greeklang/) (specifications for lexical and numeric tokens [here](http://neelsmith.github.io/greeklang/specs/greek/tokens/Tokens.html)).  The implementation is reasonably complete for integers in the range 1..19,999 (although code and spec both need cleaning up).  Defining input and output standards either for ASCII characters only or characters in Unicode's (crazily incoherent) polytonic Greek range is easy thanks to Hugh Cayless' always flawless [Epidoc transcoder](http://sourceforge.net/projects/epidoc/files/Transcoder/).
