--- a/_posts/2015-07-02-science.md
+++ b/_posts/2015-07-02-science.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: Scholarly kitchen
+tags:
+ - publication
 ---
 
 
@@ -12,12 +14,9 @@ To take one example from a  crucial point in his argument, Anderson writes
 > We can no longer depend on the scarcity of print or the difficulties of distance or barriers of professional expertise to narrow access down to experts with a true need.
 
 
-I think this means something like 
+I think this means something like
 
 
 >The inadequacy of our technology is no longer sufficient to mask our reliance on appeal to authority in lieu of demonstrable competence.
 
 But surely that's not possible, it is?
-
-
-
