--- a/_posts/2015-05-27-good-news.md
+++ b/_posts/2015-05-27-good-news.md
@@ -1,11 +1,13 @@
 ---
 layout: post
 title: "Good news for Latin in the US?"
+tags:
+ - classics
 ---
 
 Greg Crane points out the alarming drop in Ancient Greek and Latin enrollments in US postsecondary institutions in an aptly titled post  "[Bad News for Latin in the US, worse for Greek](http://sites.tufts.edu/perseusupdates/2015/05/19/bad-news-for-latin-in-the-us-worse-for-greek/)."  His fuller discussion ([here](https://docs.google.com/document/d/1HfAQZUyRfDV0BPS39wx9kwPEqqTOwUtlC23GfCfvF1Y/edit#)) compares this clear trend with  declining enrollment figures in Germany, and with information about enrollments in Latin in US secondary schools.
 
-The data on Latin in secondary schools may need more contextualization, however.  Crane cites the low percentage of high-school students taking Latin courses in this [Education Department study](https://nces.ed.gov/programs/digest/d09/tables/dt09_056.asp).  There is no question that a far smaller percentage of students today are taking high-school Latin than did so in the samples from 1948-1965;  but after the historic low of 1.1% in 1976, the proportion has hovered between 1.3-1.6% from 1990 and 2007, the last year covered.  In other words, the situation today for Latin today is measurably better than in the bleakest years years of he 1970s:  each year in the US, a couple of hundred thousand students continue to study high-school Latin. 
+The data on Latin in secondary schools may need more contextualization, however.  Crane cites the low percentage of high-school students taking Latin courses in this [Education Department study](https://nces.ed.gov/programs/digest/d09/tables/dt09_056.asp).  There is no question that a far smaller percentage of students today are taking high-school Latin than did so in the samples from 1948-1965;  but after the historic low of 1.1% in 1976, the proportion has hovered between 1.3-1.6% from 1990 and 2007, the last year covered.  In other words, the situation today for Latin today is measurably better than in the bleakest years years of he 1970s:  each year in the US, a couple of hundred thousand students continue to study high-school Latin.
 
 To contrast the difference between the steady state of Latin in US high schools and the decline in post-secondary enrollments, we should also look at size of the respective populations.  While the proportion of high-school and earlier enrollments are dropping in the US, the proportion of student enrollments at colleges continues to rise.  (See this [summary graph from the Census Bureau](http://www.census.gov/hhes/school/data/cps/historical/FigureA-1_2013.pdf)).  There is probably a more dramatic difference between secondary- and post-secondary enrollments than Crane's post suggests.
 
@@ -19,12 +21,3 @@ She qualifies these impressions by pointing out other kinds of data I could look
 
 
 My working hypothesis:  people who have PhDs in Classics?
-
-
-
-
-
-
-
-
-
