Tidy some more tagging

--- a/_posts/2015-02-15-atom.md
+++ b/_posts/2015-02-15-atom.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 title: Atom feed added
+tags:
+ - about
 ---
 
 You can keep up with updates to this site with this atom feed:  <http://neelsmith.github.io/atom.xml>
-
