--- a/_posts/2015-07-31-minute.md
+++ b/_posts/2015-07-31-minute.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: Everything I know about manuscripts in one minute
+tags:
+ - shamelesspromo
 ---
 
 When I first learned about the public radio program *The Academic Minute*, it sounded like a joke.  Summarize a complex research project in one minute? It reminded me of the Monty Python sketch in which game-show contestants have fifteen seconds to summarize the works of Proust (although without the pythonesque requirement to repeat the performance once in a swimsuit and once in evening dress).
