--- a/_posts/2015-09-08-atom.md
+++ b/_posts/2015-09-08-atom.md
@@ -1,6 +1,8 @@
 ---
 title: "Atom: an editor for digital humanists?"
 layout: post
+tags:
+ - atom-electron
 ---
 
 This summer, github's [Atom](https://atom.io/), "a hackable text editor for the 21st century," went public with an official 1.0 release.  New text editors are the kind of thing I don't get excited about — there are plenty of good ones out there already to choose from — but Atom is different.
