--- a/_posts/2015-07-06-validate.md
+++ b/_posts/2015-07-06-validate.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title:  Automatic XML validation simutaneously in two validation systems
+tags:
+ - hmt
 ---
 
 Contributors to the Homer Multitext project use software preinstalled in a virtual machine running Ubuntu 14.04 to validate  and verify their work.  The VM includes a very nice XML editor, XML Copy Editor, but some members are already accustomed to editing XML using oXygen in their host machine.  No problem sharing files between the VM and host machine, but with some complex Relax NG schemas, XML Copy Editor seems to hang.
@@ -10,7 +12,7 @@ If our project was about developing an XML editor, we would dig into this, but i
 XML Copy Editor performs flawlessly on the same complex texts when given a DTD.  Since we're working with TEI compliant XML, we're rescued by the ODD approach:  we can use Relax NG schemas in oXygen, and DTDs in XML Copy Editor with some confidence that we'll get identical syntax validation (and in either case, will then apply our-project specific content validation software suite to evaluate the contents of the documents' text nodes).
 
 
-Oxygen has a preference setting to "Ignore the DTD for validation if a schema is specified".  
+Oxygen has a preference setting to "Ignore the DTD for validation if a schema is specified".
 
 ![oXygen preferences](/imgs/oxypreff.png)
 
@@ -24,4 +26,3 @@ In my installation, it was already checked.  (Whether I made that choice manuall
 
 
 Now we can open the same XML file in oXygen on the host OS and XML Copy Editor in the VM, and validate without changing either the processing instructions of the DOCTYPE declaration.  Syntax validation, context-aware popups, and all the other end-user support that makes these editors so nice to work in, function correctly in both editors.
-
