--- a/_drafts/2015-10-26-sfst1.md
+++ b/_drafts/2015-10-26-sfst1.md
@@ -11,3 +11,29 @@ Tutorial step 1.
 The Harvey Mansfield transducer.
 
     B:A C:B D:C F:D
+
+    % SFST tutorial, 1
+
+
+    % step 1:
+    % B:A | C:B | D:C | F:D
+
+
+
+    % SFST 2:
+    % run fst-print and notice 2 generators for D
+    %[B-F]:[A-D]
+
+    % SFST 3:
+    % [B-D]:[A-C] | F:D
+
+
+    % SFST 4:
+    %$mansfield$ = [B-D]:[A-C] | F:D
+    %$mansfield$
+
+
+    % SFST 5:
+    ALPHABET= [B-D]:[A-C]  F:D
+    .
+    % vs. ".*"
