--- a/_drafts/2015-10-26-sfst1.md
+++ b/_drafts/2015-10-26-sfst1.md
@@ -7,6 +7,8 @@ tags:
 
 
 Tutorial step 1.
+Need to intro fst-compiler fst-print fst-mor (batch with fst-infl).
+
 
 The Harvey Mansfield transducer.
 
@@ -37,3 +39,47 @@ The Harvey Mansfield transducer.
     ALPHABET= [B-D]:[A-C]  F:D
     .
     % vs. ".*"
+
+
+
+    What's a morphological parser?
+
+    We want to map luw -> <1st><sg>
+
+    % sfst2
+
+
+% STEP 1
+%$stem$ = lu
+%$inflection$ = w<1st><sg>
+
+%$stem$ $inflection$
+
+
+%STEP 2
+%$stem$ = lu
+%$inflection$ = w<1st><sg> | mi<1st><sg>
+%$stem$ $inflection$
+
+
+% STEP 3:
+%$stem$ = lu<thematic> | deiknu<athematic>
+
+%$inflection$ = <thematic>w<1st><sg> | %<athematic>mi<1st><sg>
+
+%$stem$ <##> $inflection$
+
+
+
+Now use identify variables to unify appropriate matches.
+Then add a second -w verb.
+Then add a second set of inflections
+
+Then squash tags.
+
+Now can do
+
+luw
+lueis
+deiknumi
+deiknus
