Add tag for HCMID

--- a/_posts/2015-10-17-parsley.md
+++ b/_posts/2015-10-17-parsley.md
@@ -5,6 +5,7 @@ tags:
  - sfst
  - parsley
  - classics
+ - hcmid
 ---
 
 I first learned about Harry Schmidt's Parsley a little over a year ago, when, in preparing for work on a new Greek morphological parser, I was actively searching for examples of parsers for other
