Further draft material for next posts

--- a/_drafts/2015-10-26-abc.md
+++ b/_drafts/2015-10-26-abc.md
@@ -6,5 +6,18 @@ tags:
 ---
 
 
+The central challenge of digital scholarship is ...
 
+Consider digital scholarly editions.
+
+Machine actionable.  Does not mean no uncertainty about source text. (TEI `unclear`)
+Text it documents may even be ambiguous.  (Editor may disambiguate eg NER, or may leave)
+But the edition represents that uncertainy about or ambiguity in the source text
+unambiguously.
+
+In this regard, an edition more closely resembles a computer program.
+
+Requires an explictly defined alphabet.
 Rigorously defined normalization of Greek.
+
+Apologies to anyone so old and unfortunate that the title of this post put a Jackson 5 earworm in your brain.
