--- a/_posts/2015-11-14-xml_utils.md
+++ b/_posts/2015-11-14-xml_utils.md
@@ -39,4 +39,4 @@ but if you define `w` elements as "tokenizing markup," extracting text from the 
 See the [project webpage][webpage] for more information.
 
 
-[webpage]: http://neelsmith.github.io/groovyXmlUtils/documentation/XmlUtils.html
+[webpage]: http://neelsmith.github.io/groovyXmlUtils/
