--- a/_posts/2015-11-14-xml_utils.md
+++ b/_posts/2015-11-14-xml_utils.md
@@ -7,7 +7,7 @@ tags:
 
 ---
 
-Groovy's XML parser is a convenient way to get an in-memory parse tree from an XML source like a file or a string of XML data, but there are a few recursive tasks I find myself constantly writing yet one more time.  I've released the first version of a package that abstracts one of the most common:  extracting all text content from a tree or subtree or the parsed document.
+Groovy's XML parser is a convenient way to get an in-memory parse tree from an XML source like a file or a string of XML data, but there are a few recursive tasks I find myself constantly writing yet one more time.  I've released the first version of a package that abstracts one of the most common:  extracting all text content from a tree or subtree of the parsed document.
 
 It normalizes white space outside of text nodes, so that extracting the text from a sequence like this
 
