--- a/_posts/2015-11-24-xml_utils.md
+++ b/_posts/2015-11-24-xml_utils.md
@@ -26,7 +26,7 @@ Parsing it in groovy is a one-liner:
     Node root = new XmlParser().parseText(ozymandias)
 
 
-If you wanted to print out the line numbers (given in the `n` attribute of eah `l` element), it's as simple as
+If you wanted to print out the line numbers (given in the `n` attribute of each `l` element), it's as simple as
 
     root.children().each { childNode ->
       println childNode.'@n'
