--- a/_posts/2015-12-15-semver.md
+++ b/_posts/2015-12-15-semver.md
@@ -14,18 +14,18 @@ User documentation and testable specifications, on the other hand, do not always
 
 ## A semantic versioning model for documentation
 
-I've tried to apply the syntax and logic of semantic versioning to user documentation and specification documents.  The documentation is identified by a three-part version number following the syntactic requirements of the [semantic versioning specification](http://semver.org/) in the form `MAJOR.MINOR.PATCH`.  The logic dictating when each part of the version number must be incremented is analogous to the logic for changing source code's version:
+I've tried to apply the syntax and logic of semantic versioning to user documentation and specification documents.  The documentation is identified by a three-part version number in the form `MAJOR.MINOR.PATCH` following the syntactic requirements of the [semantic versioning specification](http://semver.org/).   The logic dictating when each part of the version number must be incremented is analogous to the logic for changing the version on source code:
 
 1. `MAJOR` version: increment when the documentation applies to a *new release version* of the code.
-2. `MINOR` version: increment when the documentation expands coverage of an existing implementation of the library.
-3. `PATCH` version:  incremenmt when an error in the documentation is corrected.
+2. `MINOR` version: increment when the documentation expands coverage of an *already released version* of the code.
+3. `PATCH` version:  increment when an error in the documentation is corrected.
 
-## Examples
+## An example
 
-You release version `1.0.0` of your definitive `digitalscholar` widget;  you simultaneously release version `1.0.0` of the user documentation.  It clearly includes automatically inserted references identifying the current version of the source code.
+You release version `1.0.0` of your definitive `digitalscholar` widget;  you simultaneously release version `1.0.0` of the user documentation.  It prominently includes automatically inserted references identifying the current version of the source code.
 
-You fix a bug, and release `1.0.1` of `digitalscholar`.  Nothing in the documentation needs to change.  You leave it at version `1.0.0`, satisfied that it clearly states that it documents version `1.0.0` of `digitalscholar`.
+You fix a bug, and release `1.0.1` of `digitalscholar`.  Nothing in the documentation needs to change. (In fact, the code and the documentation now agree!)  You leave the documentation at version `1.0.0`, satisfied that it clearly states that it documents version `1.0.0` of `digitalscholar`.  Clear release notes accompanying `1.0.1` of your source code should prevent confusion when users of version `1.0.1` pick up documentation for version `1.0.0`.
 
-You add a new section to your documentation, addressing FAQs that have come in from users of `digitalscholar`.  You rebuild the documentation as version `1.1.0`;  automatically inserted references to the current version of the source code will now point to `1.0.1`.
+You later add a new section to your documentation, addressing FAQs that have come in from users of `digitalscholar`.  You rebuild the documentation as version `1.1.0`;  automatically inserted references to the current version of the source code will now point to `1.0.1`.
 
 You implement a new feature in `digitalscholar` that does not break the current API.  Following semantic versioning principles, you now assign your source code the version `1.1.0`.  You simultaneously release documentation for it:  this documents a new release, so you assign the documentation `2.0.0`. You immediately notice a typographic error, fix it, and release the fix as version `2.0.1`, clearly labelled as documenting version `1.1.0` of `digitalscholar`.
