--- a/_posts/2016-01-21-linux.md
+++ b/_posts/2016-01-21-linux.md
@@ -13,10 +13,10 @@ The [Linux  Counter Project](https://www.linuxcounter.net/) tries to estimate th
     user and register your linux machines now!
 
 
-The most recent Linux user I know is, unfortunately, not registered with the Linux Counter Project.  Its invitation  would mean nothing to her: some of its questions  she would find unintelligible.  She can more easily recall how she heard the news of the bombing of Pearl Harbor than she can remember when to left click and when to right click.  She is also my mother.
+The most recent Linux user I know is, unfortunately, not registered with the Linux Counter Project.  This invitation  would mean nothing to her: some of its questions  she would find unintelligible.  She can more easily recall how she learned of the bombing of Pearl Harbor than she can remember when to left click and when to right click.  She is also my mother.
 
 For what its worth, her distro of choice is [Elementary OS](https://elementary.io/).  She is thrilled with a new [Zini desktop](http://zareason.com/shop/Desktops/), an Intel NUC kit purchased fully configured and tested from the extremely helpful people at [Zareason] (http://zareason.com/shop/home.php).  She is delighted that she's no longer prodded to upgrade to Windows 10, and that she does not have to worry whether the baffling security services from Norton (or maybe it's McAfee) are up to date.  Everything she routinely does with her computer is available from a dock that never disappears.  The user interface is beautiful.
 
-She is amazed that her operating system started out as a  project developed by students and hobbyists in the early '90's.   She finds it hard to believe that its free licensing has allowed countless geeks to play with, contribute to and fork their own versions of Linux.  She really can't quite fathom the fact that the same core OS she is using to email her grandchildren, play Free Cell, and work on book manuscripts runs most of the world's supercomputers, and all of the world's Android phones.
+She is amazed that her operating system started as a  project developed by students and hobbyists in the early '90's.   She finds it hard to believe that its free licensing has allowed countless geeks to play with, contribute to and fork their own versions of Linux.  She can't quite fathom the fact that the same core OS she now uses to email her grandchildren, play Free Cell, and work on book manuscripts runs most of the world's supercomputers, and all of the world's Android phones.
 
 Neither can I.
