--- a/_posts/2016-03-26-lists.md
+++ b/_posts/2016-03-26-lists.md
@@ -8,7 +8,7 @@ tags:
 
 Scholarly discussions of texts often depend on readings or analyses that can be organized in lists (passages of the *Iliad* where Achilles speaks, chapters of *Moby Dick* that are heavy with cetological vocabulary,...)  Since texts have an inherent document order, the lists of anlayses, too, can be be ordered, and the generic operation of comparing ordered lists can be applied to a wide range of problems,  concerned with content (how does the chronologically ordered list of Sicilian colonies in Thucydides, book 6, compare to the list in Jerome's *Chronicles*?), structure (what lines of the *Iliad* appear in this manuscript of vs. another manuscrit?), or other aspects of the text.
 
-Strings, too, can be thought of as ordered lists of characters, as was brought home to me recently in my current work on a system for analyzing Greek morphology.   Consider the advantages of a generic libary for comparing lists when working with the following two strings (with Greek represented in an ASCII-only transliteration).
+Strings, too, can be thought of as ordered lists of characters, as was brought home to me recently in my current work on a system for analyzing Greek morphology.   Consider the advantages of a generic library for comparing lists when working with the following two strings (with Greek represented in an ASCII-only transliteration).
 
 One string is a surface form appearing in a Greek text, `lusai` (λυσαι).  A morphological analysis proposes the hypothesis that this is an aorist form pairing a stem `lu_` with an ending `ai` (where the underscore explicitly indicates that the `u` character is phonetically long).
 
