--- a/_posts/2016-03-26-lists.md
+++ b/_posts/2016-03-26-lists.md
@@ -23,7 +23,7 @@ Yesterday, I [released a 1.0 version of a library for comparing ordered lists](h
 
 Computing the LCS, the unique characters in each string, and the differences between the two strings produces identical results for either ordering of the two. That is, the results are identical whether you compare string 1 with string 2, or string 2 with string 1.  Computing SCS, on the other hand, can result in ambiguous "ties" in the ordering when elements unique to each list appear at the same point in the list sequence.
 
-Here, for example, both strings have unique characters at exactly the same point in the sequence (the `_` character in string 1 and the `s` in string 2).  I give priority to the first string in case of ties, so if we compare `lu_ai` with `lusai`, we get the desired `lu_sai`.  If, on the other hand, we compare `lusai` with `lu_ai`, we get `lus_ai` which is nonsensical in this context (since consonants cannot have vowel quanitity).  As always, you need to understand both your tools and your data.  (Never let a plumber with a sawzall work in your house without supervision.)
+Here, for example, both strings have unique characters at exactly the same point in the sequence (the `_` character in string 1 and the `s` in string 2).  I give priority to the first string in case of ties, so if we compare `lu_ai` with `lusai`, we get the desired `lu_sai`.  If, on the other hand, we compare `lusai` with `lu_ai`, we get `lus_ai` which is nonsensical in this context (since consonants cannot have a vowel quanitity marker).  As always, you need to understand both your tools and your data.  (Never let a plumber with a sawzall work in your house without supervision.)
 
 
 I'm finding the SCS computation useful enough, that I've made a gist with a groovy script to find the SCS of two strings: <https://gist.github.com/neelsmith/7fc5ae04ae58bcf3ac8a>.  Give the script two string arguments, and it prints the SCS to standard output, e.g.,
