--- a/_posts/2016-04-09-kanones.md
+++ b/_posts/2016-04-09-kanones.md
@@ -3,6 +3,7 @@ layout: post
 title: "Introducing Kanōnes, a system for building Greek morphological parsers"
 tags:
  - morphology
+ - smyth
 ---
 
 
