Post on Kanones

--- a/_posts/2016-04-09-kanones.md
+++ b/_posts/2016-04-09-kanones.md
@@ -45,4 +45,9 @@ Because both stem and inflectional pattern belong to the class `ew_contract`, Ka
 and the system will correctly parse the Attic form ἐποίει.  To analyze a corpus with both contracted and uncontracted forms of -εω contract verbs, you would include *both* rules in the inflectional tables.
 
 
-To test the internal workings of the system, I'm currently assembling a set of stems and rules that cover all the paradigms and synopses in Herbert Weir Smyth's *Greek Grammar*.  I've set up a [scorecard, here](http://neelsmith.github.io/greeklang/morphology/smyth/) if you want to track the progress of this testing.  It will take some time to enter and verify every form in a Smyth paradigm, but I hope to pass enough tests to justify releasing a 1.0 version of Kanōnes in May.
+To test the internal workings of the system, I'm currently assembling a set of stems and rules that cover all the paradigms and synopses in Herbert Weir Smyth's *Greek Grammar*, and am writing accompnaying unit tests that parse every for in those paradigms.  (I've set up a [scorecard, here](http://neelsmith.github.io/greeklang/morphology/smyth/), if you want to track the progress of this testing.)  
+
+Results of the first two tests are encouraging:  **Smyth 382** is a synopsis of λύω that includes, in addition to conjugated forms in the first singular, all infinitives, and the masculine nominative singular of all participles and verbal adjectives.  **Smyth 406** is a conjugation of four verbs that undergo euphonic changes in the perfect middle-passive system (λείπω, γράφω, πείθω, πράττω).  The 155 forms successfully tested for these two sections  of Smyth ensure that the basic patterns of verb formation are correctly parsed.
+
+
+It will take some time to enter and verify every form in all of  Smyth's paradigms, but I hope to pass enough tests to justify releasing a 1.0 version of Kanōnes in May.
