--- a/_posts/2016-07-02-fst1.md
+++ b/_posts/2016-07-02-fst1.md
@@ -1,16 +1,16 @@
 ---
 layout: post
-title: Introduction to finite state transducers
+title: "The  data/acceptor/analyzer pattern for parsing morphology"
 tags:
  - latinmorph
 ---
 
-Finite state transducers (FSTs) are the core of a system for parsing Latin morphology. This post serves to illustrate my fuller discussion of "Morphological analysis of historical languages" (forthcoming in *BICS*, December, 2016) with  a small but complete example of a system to parse regular second-declension Latin nouns in *-us* or *-um* using the [Stuttgart FST toolkit](http://www.cis.uni-muenchen.de/~schmid/tools/SFST/), SFST.   The documentation for the SFST toolkit includes a user manual, a tutorial, and example parsers for German and English, where the syntax and semantics of the SFST notation, SFST-PL, are fully documented.
+Finite state transducers (FSTs) are the core of a system for parsing Latin morphology. This post serves to illustrate my fuller discussion of "Morphological analysis of historical languages" (forthcoming in *BICS*, December, 2016) with  a small but complete example of an important pattern in designing a morphological system, that I call the "data/acceptor/analyzer" pattern.  The example parses regular second-declension Latin nouns in *-us* or *-um* using the [Stuttgart FST toolkit](http://www.cis.uni-muenchen.de/~schmid/tools/SFST/), SFST.   The documentation for the SFST toolkit includes a user manual, a tutorial, and example parsers for German and English, where the syntax and semantics of the SFST notation, SFST-PL, are fully documented.
 
-This example illustrates the "data / acceptor/ analyzer" pattern to build a parser in three chained transducers. The first transducer assembles a data set by combining a lexicon of stems with a set of inflectional rules.  This is the input to a second transducer, the "acceptor," which filters the data for appropriate combinations of stem and rule.  It ensures that only rules of the same inflectional class as the stem are kept.  The third transducer takes this strips out analytical information so that only a valid Latin form remains.
+The "data/acceptor/analyzer" pattern is implemented in a chain of three transducers. The first transducer assembles a data set by combining a lexicon of stems with a set of inflectional rules.  This is the input to a second transducer, the "acceptor," which filters the data for appropriate combinations of stem and rule.  It ensures that only rules of the same inflectional class as the stem are kept.  The third transducer takes these valid records, and strips out analytical information so that only a valid Latin form remains. The resulting bi-directional transducer can then produce the full analysis with morphological data when given a form, or can generate the form when given the morphological data.
 
 
-The parser is organized in three files, written in the SFST's notation called SFST-PL. First, `lexicon.fst` contains a single entry for the neuter noun *donum, doni*; then `inflection.fst` specifies rules for masculine, feminine or neuter nouns of the second declension with nominative singular forms in *-us* or *-um*; `demo.fst` contains the parsing system.
+The parser is organized in three files, written in  SFST-PL. First, `lexicon.fst` contains a single entry for the neuter noun *donum, doni*; then `inflection.fst` specifies rules for masculine, feminine or neuter nouns of the second declension with nominative singular forms in *-us* or *-um*; `demo.fst` contains the parsing system.
 
 To run the parser with sfst tools, first compile `inflection.fst` (`fst-compile inflection.fst`), then compile `demo.fst`.  You can use the resulting binary `demo.a` with any of the SFST utilities, e.g., `fst-mor demo.a` to submit forms to analyze morphologically.
 
@@ -45,7 +45,7 @@ To run the parser with sfst tools, first compile `inflection.fst` (`fst-compile 
     $inflection$
 
 
-### 3. The parser
+### 3. The parser (`demo.fst`)
 
     % Analytical symbols:
     #gender# = <masc><fem><neut>
