--- a/_posts/2017-02-19-reorg.md
+++ b/_posts/2017-02-19-reorg.md
@@ -10,7 +10,7 @@ tags:
 I've reorganized the listings of my code libraries to point people more directly to my current work in three areas:
 
 1. generically applicable code libraries implementing the abstract [models of the CITE architecture](https://neelsmith.github.io/cite/)
-2. libraries for working with digital representations of [ancient Greek](https://neelsmith.github.io/greek/)
+2. libraries for working with digital representations of [ancient Greek](https://neelsmith.github.io/greek_language/)
 3. libraries for working with the archive of [the Homer Multitext project](https://neelsmith.github.io/hmt/)
 
 
